--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -171,7 +171,7 @@
    "source": [
     "from pyspark.sql.functions import *\n",
     "result = apd.select(explode(apd.favorite_foods).alias(\"food\"), \"user_id\")\n",
-    "result.collect()"
+    "writer(result, \"users\", \"favorite_foods_index\")"
    ]
   },
   {
@@ -181,8 +181,31 @@
     "collapsed": false
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "IPython.load_extensions('usability/hide_input');"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "writer(result, \"users\", \"favorite_foods_index\")"
+    "%%javascript\n",
+    "IPython.load_extensions('usability/hide_input');"
    ]
   },
   {
