--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -1597,6 +1597,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
