renamed files, added dataframe join where sort

--- a/exercises-solutions.ipynb
+++ b/exercises-solutions.ipynb
@@ -4,13 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's start with the basics."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Connecting to Spark"
    ]
   },
@@ -23,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -51,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -70,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -85,7 +78,7 @@
        " Row(user_id=5, age=10, favorite_foods=[u'Anger'], name=u'Larry')]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -114,7 +107,7 @@
        "[Row(user_id=3, age=108, favorite_foods=[u'Muffins', u'Pie', u'Steak'], name=u'Patrick')]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -136,7 +129,7 @@
        "[Row(user_id=4, age=1, favorite_foods=[u'Candy', u'Fear'], name=u'Baby Luke')]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -179,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -196,31 +189,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Aggregations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "user = training_reader(\"user\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Working with Collections"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
@@ -230,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -256,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -267,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -280,7 +248,7 @@
        " Row(user_id=3, age=108, favorite_foods=[u'Muffins', u'Pie', u'Steak'], name=u'Patrick')]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -311,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -322,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -333,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -1344,7 +1312,7 @@
        " ...]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1355,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -1366,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -1378,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -1389,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -1401,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -1414,12 +1382,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Aggregate Ratings by Movie"
+    "# Aggregate Ratings by Movie"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -1430,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -1441,7 +1409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -1452,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -1463,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -1474,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -1484,27 +1452,27 @@
       "text/plain": [
        "[Row(movie_id=u'53355', name=u'Sun Alley (Sonnenallee) (1999)', tags=[u'Comedy', u'Romance'], rating=5.0),\n",
        " Row(movie_id=u'51209', name=u'Fighting Elegy (Kenka erejii) (1966)', tags=[u'Action', u'Comedy'], rating=5.0),\n",
-       " Row(movie_id=u'33264', name=u\"Satan's Tango (S\\xe1t\\xe1ntang\\xf3) (1994)\", tags=[u'Drama'], rating=5.0),\n",
        " Row(movie_id=u'42783', name=u'Shadows of Forgotten Ancestors (1964)', tags=[u'Drama', u'Romance'], rating=5.0),\n",
+       " Row(movie_id=u'33264', name=u\"Satan's Tango (S\\xe1t\\xe1ntang\\xf3) (1994)\", tags=[u'Drama'], rating=5.0),\n",
        " Row(movie_id=u'64275', name=u'Blue Light, The (Das Blaue Licht) (1932)', tags=[u'Drama', u'Fantasy', u'Mystery'], rating=5.0),\n",
-       " Row(movie_id=u'26073', name=u'Human Condition III, The (Ningen no joken III) (1961)', tags=[u'Drama', u'War'], rating=4.75),\n",
        " Row(movie_id=u'5194', name=u\"Who's Singin' Over There? (a.k.a. Who Sings Over There) (Ko to tamo peva) (1980)\", tags=[u'Comedy'], rating=4.75),\n",
-       " Row(movie_id=u'65001', name=u\"Constantine's Sword (2007)\", tags=[u'Documentary'], rating=4.75),\n",
+       " Row(movie_id=u'26073', name=u'Human Condition III, The (Ningen no joken III) (1961)', tags=[u'Drama', u'War'], rating=4.75),\n",
        " Row(movie_id=u'4454', name=u'More (1998)', tags=[u'Animation', u'IMAX', u'Sci-Fi'], rating=4.75),\n",
        " Row(movie_id=u'26048', name=u'Human Condition II, The (Ningen no joken II) (1959)', tags=[u'Drama', u'War'], rating=4.75),\n",
+       " Row(movie_id=u'65001', name=u\"Constantine's Sword (2007)\", tags=[u'Documentary'], rating=4.75),\n",
        " Row(movie_id=u'63808', name=u'Class, The (Entre les Murs) (2008)', tags=[u'Drama'], rating=4.666666666666667),\n",
        " Row(movie_id=u'5849', name=u\"I'm Starting From Three (Ricomincio da Tre) (1981)\", tags=[u'Comedy'], rating=4.666666666666667),\n",
        " Row(movie_id=u'32657', name=u\"Man Who Planted Trees, The (Homme qui plantait des arbres, L') (1987)\", tags=[u'Animation', u'Drama'], rating=4.571428571428571),\n",
        " Row(movie_id=u'53883', name=u'Power of Nightmares: The Rise of the Politics of Fear, The (2004)', tags=[u'Documentary'], rating=4.5),\n",
-       " Row(movie_id=u'3226', name=u'Hellhounds on My Trail (1999)', tags=[u'Documentary'], rating=4.5),\n",
        " Row(movie_id=u'58185', name=u'Please Vote for Me (2007)', tags=[u'Children', u'Documentary'], rating=4.5),\n",
+       " Row(movie_id=u'3226', name=u'Hellhounds on My Trail (1999)', tags=[u'Documentary'], rating=4.5),\n",
+       " Row(movie_id=u'50477', name=u\"Testament of Orpheus, The (Testament d'Orph\\xe9e) (1960)\", tags=[u'Drama'], rating=4.5),\n",
        " Row(movie_id=u'60990', name=u'End of Summer, The (Kohayagawa-ke no aki) (1961)', tags=[u'Drama'], rating=4.5),\n",
        " Row(movie_id=u'25975', name=u'Life of Oharu, The (Saikaku ichidai onna) (1952)', tags=[u'Drama'], rating=4.5),\n",
-       " Row(movie_id=u'60336', name=u'Bad Blood (Mauvais sang) (1986)', tags=[u'Crime', u'Drama', u'Romance'], rating=4.5),\n",
-       " Row(movie_id=u'7452', name=u'Mickey (2003)', tags=[u'Crime', u'Drama'], rating=4.5)]"
+       " Row(movie_id=u'60336', name=u'Bad Blood (Mauvais sang) (1986)', tags=[u'Crime', u'Drama', u'Romance'], rating=4.5)]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1517,12 +1485,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Top movies per tag"
+    "# Top movies for a tag"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -1533,7 +1501,7 @@
        "[u'movie_id', u'name', u'tags']"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1544,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -1555,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -1566,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -1586,7 +1554,7 @@
        " Row(tag=u'Romance', movie_id=u'3', name=u'Grumpier Old Men (1995)')]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1597,12 +1565,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 34,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[u'movie_id', u'rating']"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aggregated_ratings.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Row(tag=u'Adventure', movie_id=u'26649', name=u'Lonesome Dove (1989)', movie_id=u'26649', rating=4.3076923076923075),\n",
+       " Row(tag=u'Adventure', movie_id=u'908', name=u'North by Northwest (1959)', movie_id=u'908', rating=4.261366341347299),\n",
+       " Row(tag=u'Adventure', movie_id=u'1198', name=u'Raiders of the Lost Ark (Indiana Jones and the Raiders of the Lost Ark) (1981)', movie_id=u'1198', rating=4.261317249919736),\n",
+       " Row(tag=u'Adventure', movie_id=u'25789', name=u'Shanghai Express (1932)', movie_id=u'25789', rating=4.25),\n",
+       " Row(tag=u'Adventure', movie_id=u'720', name=u'Wallace & Gromit: The Best of Aardman Animation (1996)', movie_id=u'720', rating=4.22979797979798),\n",
+       " Row(tag=u'Adventure', movie_id=u'260', name=u'Star Wars: Episode IV - A New Hope (a.k.a. Star Wars) (1977)', movie_id=u'260', rating=4.2202093397745575),\n",
+       " Row(tag=u'Adventure', movie_id=u'1204', name=u'Lawrence of Arabia (1962)', movie_id=u'1204', rating=4.209582164476598),\n",
+       " Row(tag=u'Adventure', movie_id=u'1196', name=u'Star Wars: Episode V - The Empire Strikes Back (1980)', movie_id=u'1196', rating=4.1943614395218916),\n",
+       " Row(tag=u'Adventure', movie_id=u'1197', name=u'Princess Bride, The (1987)', movie_id=u'1197', rating=4.194158595641646),\n",
+       " Row(tag=u'Adventure', movie_id=u'5618', name=u'Spirited Away (Sen to Chihiro no kamikakushi) (2001)', movie_id=u'5618', rating=4.186452947259566),\n",
+       " Row(tag=u'Adventure', movie_id=u'1254', name=u'Treasure of the Sierra Madre, The (1948)', movie_id=u'1254', rating=4.186440677966102),\n",
+       " Row(tag=u'Adventure', movie_id=u'1262', name=u'Great Escape, The (1963)', movie_id=u'1262', rating=4.175808468822583),\n",
+       " Row(tag=u'Adventure', movie_id=u'4993', name=u'Lord of the Rings: The Fellowship of the Ring, The (2001)', movie_id=u'4993', rating=4.161218471577362),\n",
+       " Row(tag=u'Adventure', movie_id=u'1223', name=u'Wallace & Gromit: A Grand Day Out (1989)', movie_id=u'1223', rating=4.159994932860401),\n",
+       " Row(tag=u'Adventure', movie_id=u'7153', name=u'Lord of the Rings: The Return of the King, The (2003)', movie_id=u'7153', rating=4.155264434740417),\n",
+       " Row(tag=u'Adventure', movie_id=u'541', name=u'Blade Runner (1982)', movie_id=u'541', rating=4.151573912481417),\n",
+       " Row(tag=u'Adventure', movie_id=u'1250', name=u'Bridge on the River Kwai, The (1957)', movie_id=u'1250', rating=4.144993590656601),\n",
+       " Row(tag=u'Adventure', movie_id=u'7700', name=u'Wages of Fear, The (Le Salaire de la peur) (1953)', movie_id=u'7700', rating=4.14367816091954),\n",
+       " Row(tag=u'Adventure', movie_id=u'60069', name=u'WALL\\xb7E (2008)', movie_id=u'60069', rating=4.133189344852412),\n",
+       " Row(tag=u'Adventure', movie_id=u'2905', name=u'Sanjuro (Tsubaki Sanj\\xfbr\\xf4) (1962)', movie_id=u'2905', rating=4.131578947368421)]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#joined = movies.join(movies_by_tag, movies.movie_id == movies_by_tag.movie_id)\n",
+    "movies_by_tag.where(movies_by_tag.tag == \"Adventure\").\\\n",
+    "              join(aggregated_ratings, movies_by_tag.movie_id==aggregated_ratings.movie_id).\\\n",
+    "              orderBy(aggregated_ratings.rating, ascending=False).\\\n",
+    "              limit(20).collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Row(movie_id=u'286', name=u'Nemesis 2: Nebula (1995)', tags=[u'Action', u'Sci-Fi', u'Thriller'], tag=u'Action', movie_id=u'286', name=u'Nemesis 2: Nebula (1995)')]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joined.head(1)"
+   ]
   },
   {
    "cell_type": "code",
