problems are coming together

--- a/exercises-solutions.ipynb
+++ b/exercises-solutions.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -63,11 +63,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Row(user_id=1, age=34, favorite_foods=[u'Bacon', u'Cheese'], name=u'Jon'),\n",
+       " Row(user_id=2, age=22, favorite_foods=[u'Kale', u'Pizza', u'Wine'], name=u'Dani'),\n",
+       " Row(user_id=4, age=1, favorite_foods=[u'Candy', u'Fear'], name=u'Baby Luke'),\n",
+       " Row(user_id=3, age=108, favorite_foods=[u'Muffins', u'Pie', u'Steak'], name=u'Patrick'),\n",
+       " Row(user_id=5, age=10, favorite_foods=[u'Anger'], name=u'Larry')]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "user.collect()"
    ]
@@ -81,7 +96,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Row(user_id=1, age=34, favorite_foods=[u'Bacon', u'Cheese'], name=u'Jon')]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user[user.name == \"Jon\"].collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "tmp = user.age > 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "user.registerTempTable(\"user\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "tmp = sql.sql(\"SELECT * from user WHERE name = 'Larry' or age > 30\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filter ((name#3 = Larry) || (age#1 > 30))\n",
+      " PhysicalRDD [user_id#0,age#1,favorite_foods#2,name#3], MapPartitionsRDD[97] at executedPlan at NativeMethodAccessorImpl.java:-2\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "tmp.explain()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+---+--------------------+-----+\n",
+      "|user_id|age|      favorite_foods| name|\n",
+      "+-------+---+--------------------+-----+\n",
+      "|      1| 34|ArrayBuffer(Bacon...|  Jon|\n",
+      "|      5| 10|  ArrayBuffer(Anger)|Larry|\n",
+      "+-------+---+--------------------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "user.filter('name = \"Larry\" or name = \"Jon\"').show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Row(user_id=3, age=108, favorite_foods=[u'Muffins', u'Pie', u'Steak'], name=u'Patrick'),\n",
+       " Row(user_id=5, age=10, favorite_foods=[u'Anger'], name=u'Larry')]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user.filter(\"age > 100 or name = 'Larry'\").collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -92,20 +232,21 @@
        "[Row(user_id=3, age=108, favorite_foods=[u'Muffins', u'Pie', u'Steak'], name=u'Patrick')]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "user[user.age > 35].collect()"
+    "user[user.age > 100 or user.favorite_foods.contains(\"Bacon\")].collect()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -132,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -145,7 +286,7 @@
     "        return df\n",
     "    return reader\n",
     "\n",
-    "training_reader = create_reader(sql, \"training\")"
+    "reader = create_reader(sql, \"training\")"
    ]
   },
   {
@@ -157,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -169,7 +310,7 @@
     "                 options(table=table, keyspace=keyspace).save(mode=\"append\")\n",
     "    return writer\n",
     "\n",
-    "training_writer = create_writer(sql, \"training\")"
+    "writer = create_writer(sql, \"training\")"
    ]
   },
   {
@@ -178,7 +319,7 @@
     "collapsed": true
    },
    "source": [
-    "# Migrating to a new structure"
+    "# Data Migrations"
    ]
   },
   {
