--- a/exercises-solutions.ipynb
+++ b/exercises-solutions.ipynb
@@ -238,30 +238,7 @@
     }
    ],
    "source": [
-    "user[user.age > 100 or user.favorite_foods.contains(\"Bacon\")].collect()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Row(user_id=4, age=1, favorite_foods=[u'Candy', u'Fear'], name=u'Baby Luke')]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "user[user.age < 20 and user.name.startswith(\"Baby\") ].collect()"
+    "user[user.favorite_foods.contains(\"Bacon\")].collect()"
    ]
   },
   {
@@ -324,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -332,7 +309,7 @@
    "source": [
     "from pyspark.sql.functions import *\n",
     "result = user.select(explode(user.favorite_foods).alias(\"food\"), \"user_id\")\n",
-    "training_writer(result, \"favorite_foods_index\")"
+    "writer(result, \"favorite_foods_index\")"
    ]
   },
   {
